docs/데이터파트/version4.6/직접수집_가이드_업종분류현황.md
# 직접 수집 가이드 — KRX 업종분류 현황 (KOSPI 18장 + KOSDAQ 18장 · 연 1회 스냅샷)

> 2026-09-03 작성 · 2026-09-06 v3.7 개정(KOSDAQ 절 추가 · 받기 전 시험 7건) ·
> **2026-09-07 v3.8 개정: KOSDAQ 18장을 실제로 받았다.** 36장 40,874행 · 격리 0 ·
> 전량 대조 일치. 받고 나서 안 것 셋을 §8.5~8.8 에 적었다 — 한 종목이 두 업종에 실리는
> 경우, KOSDAQ 업종지수를 받으면 안 되는 이유, 시장별로 다른 업종 체계.
> 팀장이 브라우저로 클릭해 내려받는 절차다.
> **왜 손으로 받나** — KRX Data Marketplace 홈페이지 이용약관(시행 2026-08-29)
> **제10조 ② "자동화 수단을 이용하여 정보를 무단 수집·복제·배포하는 행위"** 가 금지라
> 코드로 받지 않는다. 사람이 화면에서 받는 것은 약관이 의도한 사용이다.
> **제12조 ②** 사전 허락 없는 복제·배포 금지 — 받은 파일은 `data/manual/` 에만 두고
> **HuggingFace 에 올리지 않는다.** 팀원에게는 "받는 방법"(이 문서)만 공유한다.

---

## 0. 한 줄 요약

`data.krx.co.kr` 로그인 → **통계 > 기본 통계 > 주식 > 세부안내 > 업종분류 현황** →
시장 **KOSPI** · 조회일자를 아래 표의 날짜로 → **조회** → 다운로드 아이콘 → **CSV** →
`data/manual/sector/` 에 저장. 18번 반복. **KOSDAQ 도 받기로 했으면 시장만 바꿔 같은 18개
날짜로 18번 더** (§8).

---

## 1. 준비

| 항목 | 내용 |
|---|---|
| 사이트 | https://data.krx.co.kr |
| 로그인 | **필수** (2025-12-27부터). 네이버·카카오 간편가입 가능. `.env` 의 `KRX_ID` 계정 |
| 저장 폴더 | `data/manual/sector/` — 없으면 만든다 (`.gitignore` 대상, 저장소에 안 올라간다) |
| 브라우저 | 아무거나. **엑셀은 열지 않는다** (아래 4절) |

---

## 2. 화면 경로

1. 상단 메뉴 **[통계]** → **[기본 통계]**
2. 왼쪽 트리 **[주식]** → **[세부안내]** → **[업종분류 현황]**
   - 못 찾으면 상단 **화면검색**에 `업종분류` 를 치면 바로 나온다.
3. 조회 조건
   - **시장구분**: `KOSPI` (유가증권) 로 고른다. KOSDAQ 은 **선택**이다 — 받기로 했으면 §8 대로
     같은 날짜에 시장만 바꿔 한 번 더 받는다. KONEX 는 받지 않는다(유니버스 밖 · #92).
   - **조회일자**: 아래 3절의 날짜를 하나 넣는다.
4. **[조회]** 를 누른다. 표가 바뀐 것을 눈으로 확인한다.
   - 🔴 **날짜를 바꾸고 [조회]를 안 누르면 이전 날짜 표가 그대로 내려받힌다.**
     판별기가 잡아 내긴 하지만 헛걸음이다.
5. 표 오른쪽 위 **다운로드 아이콘(⬇)** → **CSV** 를 고른다.
   - Excel(xlsx) 말고 **CSV** 다. 우리 판별기가 CSV 를 읽는다.
6. 내려받은 파일을 `data/manual/sector/` 로 옮긴다.

> ⚠️ 화면 요소 이름(버튼·라벨)은 헤드리스 브라우저가 403 으로 막혀 직접 찍지 못했다.
> 실제 화면과 표기가 조금 다를 수 있다. 경로(통계>기본통계>주식>세부안내>업종분류 현황)는
> 사이트 전체 메뉴에서 확인한 것이다.

---

## 3. 받을 날짜 18개 — 🔴 거래일 달력에서 뽑았다 (짐작 아님)

매년 **첫 거래일** 17개 + **2024-07-01** (KRX 업종 체계 개편일 · `IT 서비스`·`부동산`·
`오락·문화` 지수가 이날 처음 생긴다) 1개.

| # | 조회일자 | 비고 |
|--:|---|---|
| 1 | **2010-01-04** | 우리 자료 첫날 |
| 2 | 2011-01-03 | |
| 3 | 2012-01-02 | |
| 4 | 2013-01-02 | |
| 5 | 2014-01-02 | |
| 6 | 2015-01-02 | |
| 7 | 2016-01-04 | |
| 8 | 2017-01-02 | |
| 9 | 2018-01-02 | |
| 10 | 2019-01-02 | |
| 11 | 2020-01-02 | |
| 12 | 2021-01-04 | |
| 13 | 2022-01-03 | |
| 14 | 2023-01-02 | |
| 15 | 2024-01-02 | 개편 전 마지막 연초 |
| 16 | **2024-07-01** | 🔴 **지수 신설일** — `IT 서비스`·`부동산`·`오락·문화` **지수**가 이날 생겼다. ⚠️ 실측(2026-09-03): 이날 스냅샷의 **종목 분류는 아직 옛 체계**였다(광업만 사라져 23종). 새 업종이 종목에 붙은 것은 2025-01-02 스냅샷부터다. 바뀐 날은 그 사이 어딘가 — 좁히려면 2024-10-01 쯤 한 장 더 받는다 |
| 17 | 2025-01-02 | |
| 18 | 2026-01-02 | |

> 1월 1일·주말이 겹쳐 연도마다 첫 거래일이 다르다. `trading_calendar` 에서
> `MIN(bas_dd) GROUP BY 연도` 로 뽑은 값이다. 다른 날을 넣어도 판별기는 통과시키지만
> (그날 종가로 역추적한다) 간격이 고르지 않게 된다.

**기대 행 수 (API 실측, 참고용)**: 2010-01-04 약 925행 · 2020-01-02 약 916행 ·
2026-09-01 약 943행. 700행 미만이거나 1,200행 초과면 시장구분을 잘못 골랐을 가능성이 크다.

---

## 4. 하지 말 것

| 하지 말 것 | 왜 |
|---|---|
| **엑셀로 열어 저장** | 종목코드 `005930` 이 숫자 `5930` 으로 바뀐다. 판별기가 격리한다 |
| 파일 내용 수정 | 무엇이 어떻게 바뀌었는지 기록이 사라진다. 원본은 원본대로 |
| 스크립트로 반복 호출 | 약관 제10조 ② 위반. pykrx 로그인 경로도 같다 |
| HF·깃허브에 올리기 | 약관 제12조 ② 위반. 저장소는 Public 이다 |
| KOSDAQ 을 **다른 날짜**로 받기 | 같은 폴더에 섞는 것은 된다(판별기가 종가로 시장을 가른다 · §8). 다만 **KOSPI 와 같은 18개 날짜**여야 한다 — `industry_as_of` 가 "가장 최근 스냅샷 하나" 를 통째로 주므로 날짜가 어긋나면 한 시장이 통째로 빠진다 (`tests/test_sector_kosdaq.py`) |

---

## 5. 파일 이름 — 바꾸지 않아도 된다

KRX 는 `data_2708_20260903.csv` 처럼 **일련번호 + 내려받은 날** 로 이름을 붙인다.
🔴 **뒤의 날짜는 조회일이 아니라 다운로드한 날이다.** 2015-01-02 를 조회해 오늘 받으면
`20260903` 이 붙는다. 그래서 파일명을 믿지 않는다 — 판별기가 **종가 20종을 `daily_price`
와 맞춰 기준일을 역추적**한다. 정확히 하루만 맞아야 통과, 아니면 격리.

사람이 보기 좋게 하려면 `업종분류현황_KOSPI_20150102.csv` 처럼 붙여도 된다. 다만
그 이름도 참고일 뿐, 판정은 내용으로 한다.

---

## 6. 받은 뒤

```bash
python scripts/normalize_manual.py --dry-run     # 무엇으로 판정했는지 먼저 본다
python scripts/normalize_manual.py               # normalized/sector/ 에 변환본 생성
python scripts/ingest_manual.py --kind sector    # 반입 엔진 → inbox_accepted
```

판정 출력에서 볼 것
- 파일마다 **역추적된 기준일** 이 3절의 날짜와 같은가
- **행 수** 가 기대 범위인가
- `python scripts/verify_sector.py` — 🔴 **종가·시가총액 전량 대조**(행 수가 아니라 값).
  실측 2026-09-03: 18장 16,650행 전부 `daily_price` 와 일치, 격리 0

---

## 7. 이 자료가 어디로 가나

```
data/manual/sector/*.csv
  → normalize_manual.py (cp949 → utf-8 · 기준일 역추적)
  → ingest/inbox (규격 sector.json · 격리/통과)
  → inbox_accepted (kind='sector')
  → supply/sector.py  sector_as_of(bas_dd)  ← "그날 이전 가장 최근 스냅샷"
  → scripts/export_team_dataset.py  daily_price_dev.parquet 에 industry 칸
```

`sector` 칸(소속부)은 그대로 두고 **`industry` 칸을 새로 붙인다.** 한 칸에 두 뜻을 섞지
않기 위해서다. `known_at` 은 다음 거래일 — `stock_base_info` 와 같은 규칙.

`index_price` 업종지수와 붙일 때 이름이 어긋나는 셋만 정규화한다
(2010·2020·2026 세 시점 실측 · 나머지 21개는 그대로 조인):

| 업종분류 현황 | index_price 지수명 |
|---|---|
| `은행` · `기타금융` | `금융` (상위 묶음 — 자기 지수가 없는 둘만) |
| `전기·전자` | `전기전자` (가운뎃점) |
| `기타제조` | `제조` (상위 묶음) |
| `보험` · `증권` | 그대로 — 자기 지수가 있다. 🔴 처음에 `금융` 으로 올렸다가 보험 지수에 종목 0 이 돼 되돌렸다 |
| `농업, 임업 및 어업` · `광업` | 지수 없음 |

🔴 **`제조`·`금융` 은 상위 묶음 지수**다(제조 1,526조 = 제조업 전부의 합). "시총 상위 10개
업종" 을 고를 때 이 둘을 넣으면 같은 종목을 두 번 센다 — `supply.sector.UMBRELLA_INDICES`
로 뺀다.

---

## 8. ✅ KOSDAQ — **받았다** (2026-09-07 · v3.8)

v3.7 은 "필요한 사람이 생길 때 정한다" 였다. **2026-09-07 에 팀장이 18장을 받았고 반입까지
끝냈다.** 결과부터 적는다.

| 무엇 | 실측 |
|---|---|
| 스냅샷 | **36장** (KOSPI 18 + KOSDAQ 18) · **40,874행** |
| 판별 | 18장 전부 KOSDAQ 으로 갈림 · 기준일 18개 정확 일치 · 종가 **30/30종** |
| 반입 | 들임 18 · **격리 0** · 거부 0 · 오류 0 (행 24,224 통과) |
| 전량 대조 | 종가 다름 **0** · 시가총액 다름 **0** · 시장 다름 **0** |
| `verify_sector.py` | 종료코드 **0** |

받기 전에 시험 7건으로 실측해 둔 것이 그대로 맞았다(`tests/test_sector_kosdaq.py`). 다만
**받고 나서야 알게 된 것이 셋** 있다 — 8.5·8.6·8.7 이다.

### 8.1 무엇이 다른가 — 화면에서는 시장구분 하나

| | KOSPI | KOSDAQ |
|---|---|---|
| 화면 | 같은 화면 · 시장구분만 `KOSDAQ` | |
| 날짜 | 3절의 18개 | 🔴 **같은 18개** — 다른 날을 고르지 않는다 (8.3) |
| 파일 이름 | `업종분류현황_KOSPI_YYYYMMDD.csv` | `업종분류현황_KOSDAQ_YYYYMMDD.csv` (참고용 · 판정은 내용으로) |
| 저장 폴더 | `data/manual/sector/` | **같은 폴더** — 판별기가 종가로 시장을 갈라 변환본 이름에 시장을 넣는다 |
| 기대 행 수 | 900 안팎 | `daily_price` 실측(그날 KOSDAQ 종목 수 · 2026-09-06): **2010-01-04 1,036 · 2020-01-02 1,408 · 2024-01-02 1,704 · 2026-01-02 1,830**. KOSPI 는 같은 날 925 · 916 · 953 · 958 이라 화면 행 수가 이 수와 비슷하면 맞는 시장이다. 1,000 미만이면 KOSPI 를 받은 것 |
| 업종 체계 | 2024-07-01 개편 (새 업종 3) | 🔴 **32종 → 24종**으로 줄었다(반입 규격 `sector.json` 설명) — 개편 뒤 파일이 격리되지 않도록 `sector_nm` 에 enum 을 걸지 않았다 |
| 업종지수 조인 | `index_name_for()` 로 21종 조인 | 🔴 **조인할 지수가 아예 없다.** v3.7 은 "대조표를 안 만들었다" 고 적었는데, 실측해 보니 `index_price` 에 `index_class='KOSDAQ'` 이 **0종**이다. 그리고 **받으면 안 된다** — 8.6 |

### 8.2 코드가 KOSDAQ 을 어떻게 다루나 (실측 · 시험 7건)

| 층 | 무엇 | 시험 |
|---|---|---|
| 판별 `normalize_manual.infer_sector_date` | KOSDAQ 종가 30종을 `daily_price` 와 맞춰 기준일·시장을 되짚는다. 같은 날 KOSPI 파일과 KOSDAQ 파일은 **시장으로 갈린다** | `test_KOSDAQ_종가로_되짚어도_기준일과_시장이_맞는다` · `test_같은_날_KOSPI_파일과_KOSDAQ_파일은_시장으로_갈린다` |
| 변환본 `sector_text` | 화면 CSV 에 시장구분 칸이 없어도 `KOSDAQ` 을 앞에 붙인다. 이름은 `업종분류현황_KOSDAQ_20240102` | `test_시장구분_칸이_없는_KOSDAQ_파일에는_KOSDAQ_이_앞에_붙는다` · `test_변환본_이름은_시장을_품는다` |
| 반입 `sector.json` | `market` enum 에 `KOSDAQ` 이 있다. 기본키 `(bas_dd, code)` 는 시장이 달라도 코드가 다르니 겹치지 않는다 | (규격) |
| 공급 `industry_as_of` | 같은 날짜면 두 시장이 함께 나오고 `market="KOSDAQ"` 으로 가를 수 있다 | `test_두_시장이_같은_날짜로_들어오면_함께_나오고_market_으로_가른다` |
| 반출 `attach_industry` | 종목별 `merge_asof` 라 날짜가 어긋나도 둘 다 붙는다 | `test_attach_industry_는_종목별로_붙이므로_날짜가_어긋나도_둘_다_붙는다` |
| 검증 `verify_sector.py` | ✅ **v3.8 에서 KOSDAQ 대응을 마쳤다.** §1 은 "겹쳤나" 가 아니라 **"골라낸 뒤에도 남았나"** 를 보고, §3 업종 수 흐름은 **시장별**로 나뉘며(합쳐 세니 `부동산` 이 안 사라진 것처럼 보였다), §4 조인도 시장별이다. 지수가 0종인 시장은 문제로 세지 않는다 | — |

### 8.3 🔴 날짜를 다르게 받으면 생기는 일

`industry_as_of(bas_dd)` 는 *"`bas_dd` 이전 가장 최근 스냅샷 **하나**"* 를 통째로 준다(스냅샷 = 그날의 표).
KOSPI 를 01-02 에, KOSDAQ 을 01-03 에 받으면 01-05 기준 판정에서 **KOSPI 종목이 통째로 빠진다.**
`market=` 을 주면 각자 자기 최근 것을 주지만, 안 주는 호출이 하나라도 있으면 조용히 틀린다.
결함이 아니라 설계이고, 그래서 **같은 18개 날짜**로 받는다. 시험이 이 함정을 그대로 재현한다
(`test_날짜가_어긋나면_최근_스냅샷_하나만_나온다_그래서_같은_날짜로_받는다`).

### 8.4 받은 뒤

6절과 같다. `verify_sector.py` 출력에서 **스냅샷 장수가 36** 이고 시장이 다른 행이 0 인지 본다.
KOSDAQ 업종지수 대조표는 받은 뒤 3시점(2010·2020·2026) 실측으로 `supply/sector.py` 에 더한다.

---

### 8.5 🔴 받고 나서 안 것 ① — **한 종목이 두 업종에 실린다**

KRX 화면은 한 종목을 **업종 둘에 동시에** 싣는 때가 있다. KOSPI 18장에는 0건이라
v3.7 까지는 드러나지 않았다.

실측 2026-09-07 — **KOSDAQ 34행(17쌍) · 4종목**. 조합은 전부 `부동산 + 일반서비스` 다.

| 종목 | 겹친 스냅샷 | 그 뒤 KRX 가 정리한 업종 |
|---|---|---|
| 034810 해성산업 | 2010~2017 (8장) | 2018 `일반서비스` → 2022 `금융` |
| 035610 솔본 | 2013~2017 (5장) | 2018 `일반서비스` (지금까지) |
| 001000 신라섬유 | 2016~2017 (2장) | 2018 `일반서비스` → 2021 `유통` → 2025 `부동산` |
| 034600 글로웍스 | 2010~2011 (2장) | 2012 이후 스냅샷에 없다 |

**격리하지 않는다.** 원본이 그런 것이지 파일이 잘못된 게 아니다. 대신 `supply.sector` 가
**결정적 규칙**으로 하나를 고른다.

1. 같은 스냅샷(날짜·시장) 안에서 **종목 수가 많은 업종**
2. 동수면 **업종명 사전순**

1번은 그 스냅샷 안만 보므로 `as_of` 규약을 지킨다. 그러면서 **KRX 자신의 사후 정리와
17/17 일치**한다(부동산 1~3종 vs 일반서비스 65~90종). 사전순만 쓰면 `부동산` 이 이겨
**0/17 로 반대**가 된다.

> ⚠️ 2018-01-02 스냅샷은 **규칙에 쓰지 않는다.** 2010년 시점에서 볼 수 없는 미래다.
> 규칙이 맞는지 확인하는 데만 썼다.

**DART `sic_nm` 으로 푸는 길도 봤지만 안 된다** — 커버리지 5.6%(2,267/40,569)이고,
해성산업 값(`비주거용 건물 임대업`)은 `known_at` 이 **2025-10-08** 이라 2010년 판정에
쓰면 미래참조다.

#### 🆕 칸이 하나 는다 — `industry_ambiguous`

고른 결과만 주고 고른 사실을 감추면 "왜 이 종목이 이 업종이지" 를 되짚을 수 없다.
품질 플래그를 배포본까지 흘리는 것이 실무 관행이라 **반출 칸에 넣는다.**

- 참인 행은 개발구간 전체에서 **4종목**뿐
- 업종이 안 붙은 행은 `NaN` — *"모호하지 않다"* 가 아니라 *"모른다"*
- 쓰는 쪽은 무시해도 되고 걸러내도 된다

### 8.6 🔴 받고 나서 안 것 ② — **KOSDAQ 업종지수는 지금 받으면 안 된다**

`index_price` 의 기본키가 **`(bas_dd, index_name)`** 이라 **시장이 없다.** 그런데 KOSPI 와
KOSDAQ 은 `건설`·`금속`·`금융`·`화학`·`전기전자` 같은 **같은 이름의 업종지수를 각각**
가진다. 그래서 KOSDAQ 을 받으면 `INSERT OR REPLACE` 가 같은 이름의 KOSPI 행을 덮어쓴다.

2026-09-07 에 실제로 그렇게 됐다 — **KOSPI 업종지수 17종 × 40,324행**(2,372거래일).

🔴 **행 수로는 못 잡는다.** 오히려 늘었다 — 196,272 → 244,108. `index_class` 별로 세고서야
KOSPI 가 51종 196,272행에서 49종 155,868행으로 줄어든 것이 드러났다. 복구는 됐다
(51종 196,272행 · 오염 흔적 0일).

지금은 `ingest/store/krx_index.py` 의 `_시장가드` 가 **받기 전에** 막는다. 풀려면
기본키에 `index_class` 를 넣는 마이그레이션(**v13**)이 먼저다 → 이슈 #144.

**급하지 않다** — KOSDAQ 업종지수를 쓰는 곳이 아직 없다. 2안(업종 상위 10)은 KOSPI 만
쓰고, KOSPI200 트랙은 업종을 안 쓴다.

### 8.7 받을 때 대조할 표 — 18개 날짜의 KOSDAQ 기대 행 수

`daily_price` 에서 뽑은 그날의 KOSDAQ 종목 수다. **±10 안이면 정상**이고, 1,000 미만이면
시장구분에서 KOSPI 를 받은 것이다(같은 날 KOSPI 는 887~961행).

| # | 조회일자 | KOSDAQ | 실제 받은 행 | # | 조회일자 | KOSDAQ | 실제 받은 행 |
|--:|---|--:|--:|--:|---|--:|--:|
| 1 | 2010-01-04 | 1,036 | 1,035 | 10 | 2019-01-02 | 1,325 | 1,324 |
| 2 | 2011-01-03 | 1,035 | 1,035 | 11 | 2020-01-02 | 1,408 | 1,399 |
| 3 | 2012-01-02 | 1,036 | 1,036 | 12 | 2021-01-04 | 1,471 | 1,468 |
| 4 | 2013-01-02 | 1,010 | 1,011 | 13 | 2022-01-03 | 1,536 | 1,533 |
| 5 | 2014-01-02 | 1,014 | 1,015 | 14 | 2023-01-02 | 1,615 | 1,612 |
| 6 | 2015-01-02 | 1,065 | 1,066 | 15 | 2024-01-02 | 1,704 | 1,701 |
| 7 | 2016-01-04 | 1,154 | 1,156 | 16 | **2024-07-01** | 1,740 | 1,737 |
| 8 | 2017-01-02 | 1,212 | 1,214 | 17 | 2025-01-02 | 1,784 | 1,784 |
| 9 | 2018-01-02 | 1,270 | 1,268 | 18 | 2026-01-02 | 1,830 | 1,830 |

차이는 그날 업종이 배정되지 않은 종목(신규상장·거래정지 등)에서 온다. 판별기가 종가
30종을 맞춰 기준일과 시장을 되짚으므로 **행 수가 판정 근거는 아니다** — 눈으로 확인하는
용도다.

### 8.8 KOSDAQ 업종 체계는 KOSPI 와 다르다

검증기 §3 이 두 시장을 **따로** 센다. 합쳐서 세면 한 시장에서 사라진 업종이 다른 시장에
남아 있어 안 사라진 것처럼 보인다 — 실제로 `부동산` 이 그렇게 보였다.

```
[KOSDAQ] 33 33 33 33 32 32 33 33 32 32 32 32 32 32 31 21 24 25
[KOSPI ] 24 24 24 24 24 24 24 24 24 24 24 24 24 24 24 23 26 26
```

2024-07-01 개편에서 KOSDAQ 은 **31 → 21종**으로 크게 줄었다(IT부품·디지털컨텐츠·반도체·
방송서비스·소프트웨어·인터넷·정보기기·컴퓨터서비스·통신서비스·통신장비가 사라졌다).
KOSPI 는 `광업` 하나만 빠졌다. **2024 개편 검사는 KOSPI 체계 기준으로 한다.**
